<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_code" translatable="false">OBN-A16</string>
    <string name="app_name">Baku-rush</string>
    <string name="image" translatable="false">image</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_history">History</string>
    <string name="menu_simple_mode">Simple mode</string>
    <string name="menu_about">Version info</string>
    <string name="msg_click_ad">&#8595;Go to ad-site to obtain bombs.&#8595;</string>
    <string name="msg_obtain_bomb">%d bombs were obtained!!</string>
    <string name="msg_cap_btn">Capture image</string>
    <string name="msg_focus">Focusing&#8230;</string>
    <string name="msg_capture">Capturing&#8230;</string>
    <string name="msg_pinch">Adjust by pinching and swiping.</string>
    <string name="msg_notsupported">Sorry, this function isn\'t supported.</string>
</resources>
