<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_camera"
        android:title="@string/menu_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_gallery"
        android:title="@string/menu_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_simple_mode"
        android:title="@string/menu_simple_mode"
        android:icon="@android:drawable/ic_menu_zoom"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        />
</menu>
